fixed $ misalignment with css https://github.com/barvian/number-flow/issues/84

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -469,3 +469,10 @@ textarea:disabled::placeholder {
     animation: pulse-stronger 1.4s cubic-bezier(0.77, 0, 0.17, 1) infinite;
   }
 }
+number-flow-react::part(left),
+number-flow-react::part(right),
+number-flow-react::part(left)::after,
+number-flow-react::part(right)::after,
+number-flow-react::part(symbol) {
+padding: calc(var(--number-flow-mask-height, 0.25em) / 2) 0;
+}
